Improved pagination buttons on mobile: now they are bigger, but there are fewer buttons. Small bug fixes.

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,7 @@
   font-family: "Inter Variable", sans-serif;
   font-variation-settings: "opsz" 32;
 }
+
+@theme {
+  --breakpoint-xs: 25rem;
+}
